# arfi-settings

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  missing-transltion.md.bak  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml  test.yml
about/app_configuration/: index.html
about/debug_mode/: index.html
about/installation/: index.html
about/library_goals/: index.html
about/reverse_inheritance/: index.html
about/why/: index.html
arfi_settings/: __init__.py  arfi_debug.py  connectors.py  constants.py  descriptors.py  entity.py  errors.py  handlers.py  init_config.py  main.py  readers.py  schemes.py  storage.py  types.py  utils.py
changelog/: index.html
docs/: index.md
docs/en/: index.md
docs/en/about/: app_configuration.md  installation.md
docs/overrides/partials/: copyright.html  mycontent.html
docs/ru/: index.md
docs/ru/about/: app_configuration.md  debug_mode.md  installation.md  library_goals.md  reverse_inheritance.md  why.md
docs/ru/examples/: custom_reader_and_handler.md  new_file_extentions.md
docs/ru/usage/: cli.md  config.md  connectors.md  handlers.md  pyproject.md  readers.md
en/: index.html
en/about/app_configuration/: index.html
en/about/debug_mode/: index.html
en/about/installation/: index.html
en/about/installaton/: index.html
en/about/library_goals/: index.html
en/about/reverse_inheritance/: index.html
en/changelog/: index.html
examples/custom_reader_and_handler/: index.html
examples/new_file_extentions/: index.html
search/: search_index.json
tests/: conftest.py  test_aliases.py  test_case_sensitive.py  test_cli.py  test_connectors.py  test_descriptors.py  test_env.py  test_env_config.py  test_env_file.py  test_field_default_params.py  test_field_default_value.py  test_field_type.py  test_file_config.py  test_mode_dir.py  test_ordered_settings.py  test_pyproject_toml.py  test_readers.py  test_schemes.py  test_secret.py  test_settings.py  test_utils.py
usage/cli/: index.html
usage/config/: index.html
usage/connectors/: index.html
usage/handlers/: index.html
usage/pyproject/: index.html
usage/readers/: index.html
(+9 files in other folders)
